# CORE-Cognitive-By-Gen-AI

./: .dockerignore  CLAUDE.md  README-Docker.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init.sql
.claude/: settings.local.json
.cursor/rules/: gpw-coding-agent-protocol.mdc  project-context.mdc  (+4 more)
Digital Brain/: ConsciousnessEmergenceProtocol.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/controllers/: catalyst_creativity.py  chat.py  conversations.py  core_entry.py  creative.py  knowledgebase.py  local_llm.py  system_monitor.py  worlds.py
backend/app/core/agents/: comprehension_agent.py  evaluation_agent.py  orchestration_agent.py
backend/app/core/langgraph/: core_graph.py
backend/app/langgraph/: comprehension_graph.py  core_graph.py
backend/app/models/: __init__.py  comprehension_output.py  comprehension_state.py  evaluation_output.py  orchestration_output.py  reasoning_output.py  user_input.py
backend/app/prompts/: comprehension_agent_prompt.py  evaluation_agent_prompt.py  orchestration_agent_prompt.py  reasoning_agent_prompt.py
backend/app/repository/: conversation_repository.py  creative_repository.py  knowledgebase_repository.py  world_repository.py
backend/app/services/: chat_service.py  knowledgebase_service.py
docs/: SYSTEM_MONITORING.md
mcp/: Dockerfile  README.md  __init__.py  config.py  docker-compose.yml  mcp_client_manager.py  mcp_integration_routes.py  mcp_registry_service.py  requirements.txt  test_integration.py
(+114 files in other folders)
